@@ -17,9 +17,9 @@
       margin 0
       padding 0
     .version
-      font-size 94%
       display inline-block
       float right
+      font-size 94%
       margin-left 0.41rem
       margin-top 0.22rem
       text-align right
@@ -65,8 +65,9 @@
     margin-top 0
 
   > .item.active.expanded
-    padding 0
     margin 0
+    padding 0
+
     .item
       padding-left -1.29rem
 
@@ -94,10 +95,10 @@
     border 1px solid $sidebar-search-border-colour
     border-radius 0.14rem
     color $sidebar-search-txt-colour
-    width inherit
     height 2.11rem
     margin 0.26rem 0 1.64rem -0.02rem
     padding 0 0.48rem 0 1.12rem
+    width inherit
 
   .item > span.description
     display block
