@@ -1,0 +1,17 @@
+@require '../prtl/_colour'
+
+#namespace.show
+  .status
+    label,
+    span
+      display inline-block
+      margin-right 0.49rem
+
+  .field
+    margin 0.39rem 0
+
+    label.label
+      background none
+      color inherit
+      margin-left 0
+      padding-left 0
