@@ -19,8 +19,6 @@ $dark-input-bg-colour = #222222
 $dark-input-border-colour = #000000
 $dark-input-txt-colour = #f3f3f3
 
-$dark-label-txt-colour = #9c9b9b
-
 $dark-btn-border-colour = #111111
 $dark-btn-border-hover-colour = #000000
 $dark-btn-hover-colour = #111111
@@ -31,6 +29,10 @@ $dark-btn-primary-bg-colour = #222222
 $dark-btn-primary-bg-hover-colour = #000000
 $dark-btn-secondary-bg-colour = #333333
 $dark-btn-secondary-bg-hover-colour = #222222
+
+$dark-lbl-txt-colour = #9c9b9b
+$dark-lbl-primary-bg-colour = #222222
+$dark-lbl-secondary-bg-colour = #333333
 
 $dark-placeholder-txt-colour = #666666
 
@@ -60,6 +62,12 @@ body.dark > .wrapper
     border-bottom 1px solid $dark-header-border-colour
     color $dark-header-txt-colour
 
+  #header
+    label
+      &:hover
+        background none !important
+        color $dark-btn-txt-hover-colour
+
   #header .global-header
     background-color $dark-global-header-colour
     border-top 3px solid $dark-global-header-border-colour
@@ -68,6 +76,16 @@ body.dark > .wrapper
     a.item
       &.active
         color darken($dark-txt-colour, 23%)
+
+  label.label,
+  span.label
+    background-color $dark-lbl-secondary-bg-colour
+    border 1px solid $dark-lbl-border-colour
+    color $dark-lbl-txt-colour
+    &.primary
+      background-color $dark-lbl-primary-bg-colour
+    &.secondary
+      background-color $dark-lbl-secondary-bg-colour
 
   a.button,
   button,
@@ -96,11 +114,6 @@ body.dark > .wrapper
     &:hover
       background-color $dark-btn-secondary-bg-hover-colour !important
       border 1px solid $dark-btn-border-hover-colour !important
-      color $dark-btn-txt-hover-colour
-
-  label
-    &:hover
-      background none !important
       color $dark-btn-txt-hover-colour
 
   #sidebar.sidebar
