@@ -1,4 +1,5 @@
 Tue 04 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add Namespace' detail view
 	* Release v0.0.10
 
 Sat 01 May 2021 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
